# fsd

./: CMakeLists.txt  README.md  fsd_manager.sh  install.sh  run_server.sh  setup.sh
fsd/: client.cpp  client.h  clinterface.cpp  cluser.cpp  fsd.cpp  fsd.h  fsdpaths.h  geo.h  global.h  mm.cpp  safestr.h  servinterface.cpp  sysuser.cpp  user.cpp  user.h
unix/: fsd.conf  log.txt  whazzup.txt
web/: app.py  observer.py
web/static/: app.js  style.css
web/templates/: auth_gate.html  index.html  map.html  users.html
